# device_board_osware

./: EULA  OAT.xml  README.en.md  README.md  README_zh.md
imx8mm/: BUILD.gn  README_zh.md  device.gni  ohos.build
imx8mm/audio_drivers/dsp/include/: dsp_ops.h
imx8mm/audio_drivers/dsp/src/: dsp_adapter.c  dsp_ops.c
imx8mm/audio_drivers/include/: audio_device_log.h  imx8mm_common.h
imx8mm/audio_drivers/soc/include/: dma_driver.h  imx8mm_platform.h  imx8mm_platform_ops.h  sai_driver.h
imx8mm/audio_drivers/soc/src/: dma_driver.c  imx8mm_dai_adapter.c  imx8mm_platform_adapter.c  imx8mm_platform_ops.c  sai_driver.c
imx8mm/audio_drivers/wm8904/codec/include/: wm8904.h  wm8904_log.h
imx8mm/audio_drivers/wm8904/codec/src/: wm8904.c  wm8904_impl.c
imx8mm/bootanimation/: BUILD.gn
imx8mm/camera/include/device_manager/: mx6s_csi.h
imx8mm/camera/include/driver_adapter/: v4l2_buffer.h  v4l2_dev.h
imx8mm/camera/src/device_manager/: mx6s_csi.cpp  sensor_controller.cpp
imx8mm/camera/src/driver_adapter/: BUILD.gn
imx8mm/camera/src/driver_adapter/main_test/: hos_camera_demo.cpp  hos_camera_demo.h  project_v4l2_main.h  stream_customer.h
imx8mm/camera/src/driver_adapter/src/: v4l2_stream.cpp
imx8mm/camera/src/driver_adapter/test/: BUILD.gn
imx8mm/camera/src/driver_adapter/test/unittest/include/: utest_v4l2_dev.h
imx8mm/camera/src/pipeline_core/nodes/hw_codec/: imx_codec_node.cpp
imx8mm/camera/src/pipeline_core/nodes/soft_codec/: imx_codec_node.cpp
imx8mm/common/firmware/: imx-sdma.ko  ov5640_camera_mipi_v2.ko
imx8mm/common/rootfs/: BUILD.gn  fstab.imx8mm  fstab.required  init.imx8mm.usb.rc  init.without_two_stages.cfg
imx8mm/common/unittest/platform/: BUILD.gn
imx8mm/common/unittest/platform/common/: hdf_emmc_test.cpp  hdf_gpio_test.cpp  hdf_i2c_test.cpp  hdf_mipi_dsi_test.cpp  hdf_pwm_test.cpp  hdf_rtc_test.cpp  hdf_sdio_test.cpp  hdf_spi_test.cpp  hdf_uart_test.cpp  hdf_watchdog_test.cpp
imx8mm/drivers/audio/codec/include/: wm8904.h  wm8904_log.h
imx8mm/drivers/audio/codec/src/: wm8904.c  wm8904_impl.c
imx8mm/drivers/audio/dsp/include/: dsp_ops.h
imx8mm/drivers/audio/dsp/src/: dsp_adapter.c  dsp_ops.c
imx8mm/drivers/audio/include/: audio_device_log.h  imx8mm_common.h
imx8mm/drivers/audio/soc/include/: dma_driver.h  imx8mm_platform.h  imx8mm_platform_ops.h  sai_driver.h
imx8mm/drivers/audio/soc/src/: dma_driver.c  imx8mm_dai_adapter.c  imx8mm_platform_adapter.c  imx8mm_platform_ops.c  sai_driver.c
imx8mm/drivers/audio/wm8904/codec/include/: wm8904.h  wm8904_log.h
imx8mm/drivers/bluetooth/: BUILD.gn
imx8mm/drivers/bluetooth/source/include/utils/: Log.h
imx8mm/drivers/bluetooth/source/src/: upio.c
imx8mm/drivers/camera/: BUILD.gn
imx8mm/drivers/camera/demo/: BUILD.gn
imx8mm/drivers/camera/demo/include/: project_camera_demo.h
imx8mm/drivers/camera/device_manager/: BUILD.gn
imx8mm/drivers/camera/device_manager/src/: sensor_controller.cpp
imx8mm/drivers/camera/driver_adapter/: BUILD.gn
imx8mm/drivers/camera/driver_adapter/include/: v4l2_buffer.h
imx8mm/drivers/camera/driver_adapter/src/: imx8mm_image_buffer.cpp
imx8mm/drivers/camera/driver_adapter/test/main_test/: BUILD.gn  stream_customer.cpp
imx8mm/drivers/camera/driver_adapter/test/unittest/: BUILD.gn
imx8mm/drivers/camera/include/device_manager/: mx6s_csi.h  project_hardware.h
imx8mm/drivers/camera/include/driver_adapter/: imx8mm_image_buffer.h  v4l2_buffer.h  v4l2_control.h  v4l2_dev.h  v4l2_fileformat.h  v4l2_temp.h  v4l2_uvc.h
imx8mm/drivers/camera/metadata_manager/: BUILD.gn
imx8mm/drivers/camera/pipeline_core/: BUILD.gn
imx8mm/drivers/camera/src/device_manager/: BUILD.gn  mx6s_csi.cpp  sensor_controller.cpp
imx8mm/drivers/camera/src/driver_adapter/: BUILD.gn
imx8mm/drivers/camera/src/driver_adapter/main_test/: BUILD.gn  hos_camera_demo.cpp  hos_camera_demo.h  ohos_camera_demo.cpp  project_v4l2_main.h  stream_customer.cpp  stream_customer.h  v4l2_main.cpp
imx8mm/drivers/camera/src/driver_adapter/src/: imx8mm_image_buffer.cpp  v4l2_buffer.cpp  v4l2_dev.cpp  v4l2_fileformat.cpp  v4l2_stream.cpp
imx8mm/drivers/camera/src/driver_adapter/test/: BUILD.gn
imx8mm/drivers/camera/src/driver_adapter/test/unittest/: utest_v4l2_dev.cpp
imx8mm/drivers/camera/src/driver_adapter/test/unittest/include/: utest_v4l2_dev.h
imx8mm/drivers/camera/src/pipeline_core/: BUILD.gn
imx8mm/drivers/camera/src/pipeline_core/ipp_algo_example/: ipp_algo_example.c
imx8mm/drivers/camera/src/pipeline_core/nodes/hw_codec/: imx_codec_node.cpp
imx8mm/drivers/camera/src/pipeline_core/nodes/soft_codec/: imx_codec_node.cpp  imx_codec_node.h
imx8mm/drivers/camera/src/pipeline_core/nodes/v4l2_source_node/: v4l2_source_node.cpp
imx8mm/drivers/ethernet/: Makefile  ethernet_config.mk  hdf_driver_register.c  net_adapter.c  net_adapter.h  nxpeth_mac.c  nxpeth_mac.h  nxpeth_phy.c  nxpeth_phy.h
imx8mm/drivers/wifi/adapter/: hdf_wlan_sdio_adapt.c
imx8mm/drivers/wifi/ap6212/: Makefile  wifi_config.mk
imx8mm/drivers/wifi/ap6212/hdfadapter/: hdf_driver_register.c  hdf_mac80211.c  hdfinit_ap6212.c  net_adpater.c  net_adpater.h
imx8mm/ethernet/adapter/: Kconfig  Makefile  ethernet_config.mk  nxpeth_mac.h  nxpeth_phy.c
imx8mm/kernel/: BUILD.gn  build_kernel.sh  check_build.sh  kernel.gni  kernel.mk  kernel_module_build.sh  mkbootimg.sh  patch_imx.sh
imx8mm/kernel/patches/: 001_imx_8m_mini_arch_modify_content.patch  002_imx_8m_mini_certs_crypto_modify_content.patch  004_imx_8m_mini_fs_modify_content.patch  005_imx_8m_mini_include_modify_content.patch  006_imx_8m_mini_init_kernel_modify_content.patch  007_imx_8m_mini_mm_modify_content.patch  008_imx_8m_mini_net_modify_content.patch  009_imx_8m_mini_other_modify_content.patch  010_imx_8m_mini_security_modify_content.patch  011_imx_8m_mini_sound_modify_content.patch
imx8mm/unittest/platform/common/: hdf_emmc_test.cpp  hdf_i2c_test.cpp  hdf_sdio_test.cpp  hdf_watchdog_test.cpp
imx8mm/wifi/adapter/: hdf_wlan_sdio_adapt.c
imx8mm/wifi/ap6212/: Makefile  wifi_config.mk
imx8mm/wifi/ap6212/hdfadapter/: hdf_mac80211.c
