# Copyright (C) 2021–2022 Beijing OSWare Technology Co., Ltd
# This file contains confidential and proprietary information of
# OSWare Technology Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")
import("//device/board/osware/imx8mm/kernel/kernel.gni")

# it needs adaptation for more device target
target_cpu = "arm64"
kernel_image = ""
if (target_cpu == "arm") {
  kernel_image = "uImage"
} else if (target_cpu == "arm64") {
  kernel_image = "Image"
}

print("imx8mm_group in")

kernel_build_script_dir = "//device/board/osware/imx8mm/kernel"
kernel_source_dir = "//kernel/linux/$linux_kernel_version"

# //out/ohos-arm64-release
print("root_build_dir = $root_build_dir")

action("check_build") {
  script = "check_build.sh"
  sources = [ kernel_source_dir ]
  outputs = [ "$root_build_dir/kernel.timestamp" ]
  args = [
    rebase_path(kernel_source_dir, root_build_dir),
    rebase_path("$root_build_dir/packages/phone/images/$kernel_image"),
    rebase_path("$root_build_dir/kernel.timestamp"),
  ]
}

action("build_kernel") {
  script = "build_kernel.sh"
  sources = [ kernel_source_dir ]

  deps = [ ":check_build" ]
  product_path = "vendor/$product_company/$product_name"
  build_type = "standard"
  outputs = [ "$root_build_dir/packages/phone/images/$kernel_image" ]
  args = [
    rebase_path(kernel_build_script_dir, root_build_dir),
    rebase_path("$root_out_dir/../KERNEL_OBJ"),
    rebase_path("$root_build_dir/packages/phone/images"),
    build_type,
    target_cpu,
    product_path,
    device_name,
    linux_kernel_version,
  ]
}
