# Copyright (C) 2021–2022 Beijing OSWare Technology Co., Ltd
# This file contains confidential and proprietary information of
# OSWare Technology Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

#****************************************************
#init config file
#****************************************************
ohos_prebuilt_etc("init.imx8mm.cfg") {
  source = "init.imx8mm.cfg"
  part_name = "osware_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("init.without_two_stages.cfg") {
  source = "init.without_two_stages.cfg"
  install_images = [ "system" ]
  part_name = "osware_products"
  install_enable = true
}

ohos_prebuilt_executable("weston.cfg") {
  install_enable = true
  source = "weston.cfg"
  module_install_dir = "etc/init"
  install_images = [ chipset_base_dir ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("init.imx8mm.usb.cfg") {
  source = "init.imx8mm.usb.cfg"
  part_name = "osware_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("init.imx8mm.rc") {
  source = "init.imx8mm.rc"
  module_install_dir = "etc/init"
  install_images = [ "vendor" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("init.imx8mm.usb.rc") {
  source = "init.imx8mm.usb.rc"
  module_install_dir = "etc/init"
  install_images = [ "vendor" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("fstab.imx8mm") {
  source = "fstab.imx8mm"
  part_name = "osware_products"
  install_images = [ vendor_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("fstab.required") {
  source = "fstab.required"
  part_name = "osware_products"
  install_images = [ "system" ]
  install_enable = true
}

#****************************************************
#loader
#****************************************************
ohos_copy("flash.bin") {
  sources = [ "//device/board/osware/imx8mm/loader/flash.bin" ]
  outputs = [ "$root_build_dir/packages/phone/images/flash.bin" ]
}

ohos_prebuilt_etc("imx_sdma_ko") {
  source = "//device/board/osware/imx8mm/common/firmware/imx-sdma.ko"
  module_install_dir = "./etc/imx_sdma"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("ov5640_camera_mipi_v2_ko") {
  source =
      "//device/board/osware/imx8mm/common/firmware/ov5640_camera_mipi_v2.ko"
  module_install_dir = "./etc/imx_camera"
  install_images = [ "system" ]
  part_name = "osware_products"
}

#****************************************************
#wifi firmware
#****************************************************
ohos_prebuilt_etc("firmware_apsta_bin") {
  source = "//device/board/osware/imx8mm/drivers/wifi/firmware/fw_bcm43438a1_apsta.bin"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("firmware_p2p_bin") {
  source =
      "//device/board/osware/imx8mm/drivers/wifi/firmware/fw_bcm43438a1_p2p.bin"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("firmware_bin") {
  source =
      "//device/board/osware/imx8mm/drivers/wifi/firmware/fw_bcm43438a1.bin"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("firmware_a_nvram") {
  source =
      "//device/board/osware/imx8mm/drivers/wifi/firmware/nvram_ap6212a.txt"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("firmware_hcd") {
  source = "//device/board/osware/imx8mm/drivers/wifi/firmware/bcm43438a1.hcd"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

group("init_configs") {
  deps = [
    ":firmware_a_nvram",
    ":firmware_apsta_bin",
    ":firmware_bin",
    ":firmware_hcd",
    ":firmware_p2p_bin",
    ":flash.bin",
    ":fstab.imx8mm",
    ":fstab.required",
    ":imx_sdma_ko",
    ":init.imx8mm.cfg",
    ":init.imx8mm.rc",
    ":init.imx8mm.usb.cfg",
    ":init.imx8mm.usb.rc",
    ":init.without_two_stages.cfg",
    ":ov5640_camera_mipi_v2_ko",
    ":weston.cfg",
  ]
}
