# Copyright (C) 2021–2022 Beijing OSWare Technology Co., Ltd
# This file contains confidential and proprietary information of
# OSWare Technology Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//drivers/peripheral/camera/hal/camera.gni")

config("v4l2_maintest") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-error",
    "-DGST_DISABLE_DEPRECATED",
    "-DHAVE_CONFIG_H",
    "-DCOLORSPACE=\"videoconvert\"",
    "-fno-strict-aliasing",
    "-Wno-sign-compare",
    "-Wno-builtin-requires-header",
    "-Wno-unused-variable",
    "-Wno-unused-label",
    "-Wno-implicit-function-declaration",
    "-Wno-format",
    "-Wno-int-conversion",
    "-Wno-unused-function",
    "-Wno-thread-safety-attributes",
    "-Wno-inconsistent-missing-override",
    "-fno-rtti",
    "-fno-exceptions",
    "-ffunction-sections",
    "-fdata-sections",
  ]
}

ohos_executable("v4l2_main") {
  install_enable = true
  sources = [
    "$board_camera_path/src/driver_adapter/src/v4l2_buffer.cpp",
    "$board_camera_path/src/driver_adapter/src/v4l2_dev.cpp",
    "$board_camera_path/src/driver_adapter/src/v4l2_fileformat.cpp",
    "$board_camera_path/src/driver_adapter/src/v4l2_stream.cpp",
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/src/v4l2_control.cpp",
    "$camera_path/adapter/platform/v4l2/src/driver_adapter/src/v4l2_uvc.cpp",
    "./v4l2_main.cpp",
  ]

  include_dirs = [
    "$board_camera_path/src/driver_adapter/main_test",
    "$camera_path/include",
    "$board_camera_path/include/driver_adapter",
    "//drivers/peripheral/camera/hal/adapter/platform/v4l2/src/driver_adapter/include",
  ]

  deps = [ "$hdf_uhdf_path/utils:libhdf_utils" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  defines += [ "V4L2_MAIN_TEST" ]

  install_enable = true
  public_configs = [ ":v4l2_maintest" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "camera_device_driver"
}
